src/test/ui/object-lifetime/object-lifetime-default.stderr
error: BaseDefault
  --> $DIR/object-lifetime-default.rs:4:1
   |
LL | struct A<T>(T);
   | ^^^^^^^^^^^^^^^

error: BaseDefault
  --> $DIR/object-lifetime-default.rs:7:1
   |
LL | struct B<'a,T>(&'a (), T);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^

error: 'a
  --> $DIR/object-lifetime-default.rs:10:1
   |
LL | struct C<'a,T:'a>(&'a T);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^

error: Ambiguous
  --> $DIR/object-lifetime-default.rs:13:1
   |
LL | struct D<'a,'b,T:'a+'b>(&'a T, &'b T);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: 'b
  --> $DIR/object-lifetime-default.rs:16:1
   |
LL | struct E<'a,'b:'a,T:'b>(&'a T, &'b T);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: 'a,'b
  --> $DIR/object-lifetime-default.rs:19:1
   |
LL | struct F<'a,'b,T:'a,U:'b>(&'a T, &'b U);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: 'a,Ambiguous
  --> $DIR/object-lifetime-default.rs:22:1
   |
LL | struct G<'a,'b,T:'a,U:'a+'b>(&'a T, &'b U);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 7 previous errors

